HTML for home page finished. #1

--- a/index.html
+++ b/index.html
@@ -4,16 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AJAX Project</title>
+  <link rel="stylesheet"
+        crossorigin="anonymous"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
+  <header class="container">
+    <div class="title col-12">
+      Drink It!
+    </div>
   </header>
   <main>
+    <div class="mobile-buttons border-round">
+      <button class="btn col-4 border-round">Ingredients</button>
+      <button class="btn col-4 border-round">Drinks</button>
+    </div>
+    <div class="home-logo col-12">
+      <i class="logo-large fas fa-glass-martini-alt"></i>
+    </div>
   </main>
+  <nav class="container">
+    <div class="nav-bottom col-12 border-round">
+      <i class="nav-icon fas fa-align-justify"></i>
+      <i class="nav-icon fas fa-cocktail"></i>
+      <i class="nav-icon far fa-heart"></i>
+      <i class="nav-icon fas fa-search"></i>
+    </div>
+    <div class="nav-side">
+
+    </div>
+  </nav>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
