--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 </head>
 <body>
   <header class="container">
-
     <div class="title col-12">
       <i class="home-icon fas fa-home hidden"></i>
       <h1>Drink It!</h1>
     </div>
+    <div class="hr hidden"></div>
   </header>
 
   <main>
     <div class="main-header border-round">
-      <button id="ingred-btn" class="btn col-4 border-round">Ingredients</button>
-      <button id="drinks-btn" class="btn col-4 border-round">Drinks</button>
+      <button id="ingred-btn" class="btn col-5 border-round">Ingredients</button>
+      <button id="drinks-btn" class="btn col-5 border-round">Drinks</button>
     </div>
 
     <div class="page-home">
@@ -46,8 +46,11 @@
       <i class="nav-icon far fa-heart"></i>
       <i class="nav-icon fas fa-search"></i>
     </div>
-    <div class="nav-side">
-
+    <div class="nav-side hidden">
+      <a href="#" class="nav-link">Ingredients</a>
+      <a href="#" class="nav-link">Drinks</a>
+      <a href="#" class="nav-link">Favorites</a>
+      <a href="#" class="nav-link">Search</a>
     </div>
   </nav>
   <script src="js/data.js"></script>
