Made screens reponsive from small (mobile) --> large (browser). #1

--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
       <i class="home-icon fas fa-home hidden"></i>
       <h1>Drink It!</h1>
     </div>
-    <div class="hr hidden"></div>
   </header>
 
   <main>
     <div class="main-header border-round">
       <button id="ingred-btn" class="btn col-5 border-round">Ingredients</button>
       <button id="drinks-btn" class="btn col-5 border-round">Drinks</button>
+      <h2>Drink It!</h2>
     </div>
 
     <div class="page-home">
       <div class="home-logo col-12">
+        <i class="logo-large fas fa-glass-martini-alt"></i>
+      </div>
+      <div class="large-bg border-round">
         <i class="logo-large fas fa-glass-martini-alt"></i>
       </div>
     </div>
@@ -46,11 +49,15 @@
       <i class="nav-icon far fa-heart"></i>
       <i class="nav-icon fas fa-search"></i>
     </div>
-    <div class="nav-side hidden">
-      <a href="#" class="nav-link">Ingredients</a>
-      <a href="#" class="nav-link">Drinks</a>
-      <a href="#" class="nav-link">Favorites</a>
-      <a href="#" class="nav-link">Search</a>
+    <div class="nav-side col-3">
+      <div class="nav-links">
+        <div class="hr"></div>
+        <a href="#" class="nav-link">Ingredients</a>
+        <a href="#" class="nav-link">Drinks</a>
+        <a href="#" class="nav-link">Favorites</a>
+        <a href="#" class="nav-link">Search</a>
+      </div>
+      <i class="logo-small fas fa-glass-martini-alt"></i>
     </div>
   </nav>
   <script src="js/data.js"></script>
