Populate categories list with large nav bar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="nav-links">
         <div class="hr"></div>
         <a href="#" class="nav-link">Ingredients</a>
-        <a href="#" class="nav-link">Drinks</a>
+        <a href="#" class="nav-link">Categories</a>
         <a href="#" class="nav-link">Favorites</a>
         <a href="#" class="nav-link">Search</a>
       </div>
