Change header text when changing pages | 'really' properly set colors.... #2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="main-header border-round">
       <button id="ingred-btn" class="btn col-5 border-round">Ingredients</button>
       <button id="categ-btn" class="btn col-5 border-round">Categories</button>
-      <h2>Drink It!</h2>
+      <h2 id="main-header-text">Drink It!</h2>
     </div>
 
     <div class="page-home">
