--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </header>
 
   <main>
-    <div class="main-header border-round">
-      <h2 id="main-header-text" class="hidden">Drink It!</h2>
+    <div class="main-header border-round hidden">
+      <h2 id="main-header-text">Drink It!</h2>
     </div>
 
     <div class="page-home">
