Search icon brings up 'search' page | Added input & styled. #3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <main>
     <div class="main-header border-round hidden">
       <h2 id="main-header-text">Drink It!</h2>
+      <div class="search-box hidden">
+        <input id="search-input" class="border-round" type="text" placeholder="Search..." autofocus>
+        <h2>Press 'enter' to search.</h2>
+      </div>
     </div>
 
     <div class="page-home">
@@ -44,8 +48,8 @@
     <div class="nav-bottom col-12 border-round">
       <i class="nav-icon fas fa-align-justify"></i>
       <i class="nav-icon fas fa-cocktail"></i>
-      <i class="nav-icon far fa-heart"></i>
       <i class="nav-icon fas fa-search"></i>
+      <i class="nav-icon far fa-heart"></i>
     </div>
     <div class="nav-side col-3">
       <div class="nav-links">
