Added and styled 'random drink' button | added 'hidden' div to hold detailed drink. #5

--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@
     <div class="page-home">
       <div class="home-logo col-12">
         <i class="logo-large fas fa-glass-martini-alt"></i>
+        <h2>Click the martini glass to see a random recipe!</h2>
       </div>
       <div class="large-bg border-round">
         <i class="logo-large fas fa-glass-martini-alt"></i>
+        <h2>Click the martini glass to see a random recipe!</h2>
       </div>
     </div>
 
     <div class="page-list hidden">
       <ul class="text-list border-round"></ul>
+      <div class="drink-detailed hidden"></div>
+      <button class="random-btn border-round">
+        Random Drink!
+        <i class="far fa-hand-point-up"></i>
+      </button>
     </div>
   </main>
 
