Able to render detailed drink | Still need to style. #5

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 
     <div class="page-list hidden">
       <ul class="text-list border-round"></ul>
-      <div class="drink-detailed hidden"></div>
+    </div>
+
+    <div class="drink-detailed border-round hidden">
+      <div class="border-round"></div>
       <button class="random-btn border-round">
         Random Drink!
         <i class="far fa-hand-point-up"></i>
