Rendered drink shows with correct dimensions on browser view. #5

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Click the martini glass to see a random recipe!</h2>
       </div>
       <div class="large-bg border-round">
-        <i class="logo-large fas fa-glass-martini-alt"></i>
+        <i class="logo-large2 logo-large fas fa-glass-martini-alt"></i>
         <h2>Click the martini glass to see a random recipe!</h2>
       </div>
     </div>
