Made drink details page look nicer. Issue 5 finished. #5

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       <ul class="text-list border-round"></ul>
     </div>
 
-    <div class="drink-detailed border-round hidden">
-      <button class="random-btn border-round">
+    <div class="drink-detailed border-round hidden"></div>
+    <div class="random-btn-div">
+      <button class="random-btn border-round hidden">
         Random Drink!
         <i class="far fa-hand-point-up"></i>
       </button>
