--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
       <ul class="text-list border-round"></ul>
     </div>
 
+    <div class="modal-bg hidden">
+      <div class="modal-box border-round">
+        <h2>Are you sure?</h2>
+        <div class="modal-btns">
+          <button id="modal-yes" class="modal-btn border-round">Yes</button>
+          <button id="modal-cancel" class="modal-btn border-round">Cancel</button>
+        </div>
+      </div>
+    </div>
+
     <div class="drink-detailed border-round hidden"></div>
     <div class="random-btn-div">
       <button class="random-btn border-round hidden">
