Added text to all pages | Corrections to page sizes

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
 
   <main>
     <div class="main-header border-round hidden">
-      <h2 id="main-header-text">Drink It!</h2>
+      <div class="main-header-div">
+        <h2 id="main-header-text">Drink It!</h2>
+      </div>
+      <hr id="horizontal-rule" class="hidden">
+      <div class="sub-header-div">
+        <h4 id="sub-header-text"></h4>
+      </div>
+
       <div class="search-box hidden">
-        <input id="search-input" class="border-round" type="text" placeholder="Search..." autofocus>
-        <h2>Press 'enter' to search.</h2>
+        <input id="search-input" class="border-round" type="text" placeholder="Search any drink!" autofocus>
       </div>
     </div>
 
