--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   </header>
 
   <main>
-    <div class="main-header border-round hidden">
+    <div class="main-header border-round">
       <div class="main-header-div">
         <h2 id="main-header-text">Drink It!</h2>
       </div>
-      <hr id="horizontal-rule" class="hidden">
+      <hr id="horizontal-rule">
       <div class="sub-header-div">
-        <h4 id="sub-header-text"></h4>
+        <h4 id="sub-header-text">Discover your next favorite drink</h4>
       </div>
 
       <div class="search-box hidden">
@@ -39,11 +39,13 @@
 
     <div class="page-home">
       <div class="home-logo col-12">
-        <i class="logo-large fas fa-glass-martini-alt"></i>
+        <i class="logo logo-large fas fa-glass-martini-alt"></i>
+        <i class="logo far fa-circle"></i>
         <h2>Click the martini glass to see a random recipe!</h2>
       </div>
       <div class="large-bg border-round">
-        <i class="logo-large2 logo-large fas fa-glass-martini-alt"></i>
+        <i class="logo logo-large2 logo-large fas fa-glass-martini-alt"></i>
+        <i class="logo far fa-circle"></i>
         <h2>Click the martini glass to see a random recipe!</h2>
       </div>
     </div>
@@ -89,6 +91,7 @@
       <i class="logo-small fas fa-glass-martini-alt"></i>
     </div>
   </nav>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
