Correctly position main logo with seperate components. #9

--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
     </div>
 
     <div class="page-home">
-      <div class="home-logo col-12">
-        <i class="logo logo-large fas fa-glass-martini-alt"></i>
-        <i class="logo far fa-circle"></i>
+      <div class="home-logo col-12 border-round">
+        <div class="main-logo">
+          <i class="logo logo-large fas fa-glass-martini-alt"></i>
+          <i class="logo far fa-circle"></i>
+        </div>
         <h2>Click the martini glass to see a random recipe!</h2>
       </div>
-      <div class="large-bg border-round">
-        <i class="logo logo-large2 logo-large fas fa-glass-martini-alt"></i>
-        <i class="logo far fa-circle"></i>
+      <!-- <div class="large-bg border-round">
+        <div class="main-logo">
+          <i class="logo logo-large fas fa-glass-martini-alt"></i>
+          <i class="logo far fa-circle"></i>
+        </div>
         <h2>Click the martini glass to see a random recipe!</h2>
-      </div>
+      </div> -->
     </div>
 
     <div class="page-list hidden">
