--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
       </div>
     </div>
 
-    <div class="page-list hidden">
-      <ul class="text-list border-round"></ul>
-    </div>
+    <div class="page-list hidden"></div>
 
     <div class="modal-bg hidden">
       <div class="modal-box border-round">
