Condensed similar functions into one.

--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
 
   <nav class="container">
     <div class="nav-bottom col-12 border-round">
-      <i nav-data="Ingredients" class="nav-icon fas fa-align-justify"></i>
-      <i nav-data="Categories" class="nav-icon fas fa-cocktail"></i>
-      <i nav-data="Search" class="nav-icon fas fa-search"></i>
-      <i nav-data="Favorites" class="nav-icon far fa-heart"></i>
+      <i nav-data="i" class="nav-icon fas fa-align-justify"></i>
+      <i nav-data="c" class="nav-icon fas fa-cocktail"></i>
+      <i nav-data="s" class="nav-icon fas fa-search"></i>
+      <i nav-data="favorites" class="nav-icon far fa-heart"></i>
     </div>
     <div class="nav-side col-3">
       <div class="nav-links">
         <div class="hr"></div>
-        <a nav-data="Ingredients" href="#" class="nav-link">Ingredients</a>
-        <a nav-data="Categories" href="#" class="nav-link">Categories</a>
-        <a nav-data="Search" href="#" class="nav-link">Search</a>
-        <a nav-data="Favorites" href="#" class="nav-link">Favorites</a>
+        <a nav-data="i" href="#" class="nav-link">Ingredients</a>
+        <a nav-data="c" href="#" class="nav-link">Categories</a>
+        <a nav-data="s" href="#" class="nav-link">Search</a>
+        <a nav-data="favorites" href="#" class="nav-link">Favorites</a>
       </div>
       <i class="logo-small fas fa-glass-martini-alt"></i>
     </div>
