Added link to thecocktaildb.com

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="search-box hidden">
-        <input id="search-input" class="border-round" type="text" placeholder="Search any drink!" autofocus>
+        <input id="search-input" class="border-round" type="text" placeholder="Click here to search for a drink" onfocus="this.placeholder=''">
       </div>
     </div>
 
@@ -82,6 +82,9 @@
         <a nav-data="favorites" href="#" class="nav-link">Favorites</a>
       </div>
       <i class="logo-small fas fa-glass-martini-alt"></i>
+    </div>
+    <div class="cocktail-link">
+      Powered by <a href="https://www.thecocktaildb.com/" target="_blank">TheCocktailDB</a>
     </div>
   </nav>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
