Clicking drink card will pull up drink details

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <i class="logo-small fas fa-glass-martini-alt"></i>
     </div>
     <div class="cocktail-link">
-      Powered by <a href="https://www.thecocktaildb.com/" target="_blank">TheCocktailDB</a>
+      Data provided by <a href="https://www.thecocktaildb.com/" target="_blank">TheCocktailDB</a>
     </div>
   </nav>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
