from drink details page, back button will bring back to list

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="title col-12">
       <i class="home-icon fas fa-home hidden"></i>
       <h1>Drink It!</h1>
+      <i class="back-btn fas fa-chevron-circle-left hidden"></i>
     </div>
   </header>
 
