Reduced margin/padding on pages. Fixed hr not showing up after search. Fixed sub-header text for list of drinks.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div class="sub-header-div">
         <h4 id="sub-header-text">Discover your next favorite drink</h4>
       </div>
-
       <div class="search-box hidden">
-        <input id="search-input" class="border-round" type="text" placeholder="Click here to search for a drink" onfocus="this.placeholder=''">
+        <input id="search-input" name="search-input" class="border-round" type="text" placeholder="Click here to search for a drink"
+          onfocus="this.placeholder=''">
       </div>
     </div>
 
@@ -88,9 +88,9 @@
       Data provided by <a href="https://www.thecocktaildb.com/" target="_blank">TheCocktailDB</a>
     </div>
   </nav>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
-
 </html>
