Added loading spinner

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <h4 id="sub-header-text">Discover your next favorite drink</h4>
       </div>
       <div class="search-box hidden">
-        <input id="search-input" name="search-input" class="border-round" type="text" placeholder="Click here to search for a drink"
+        <input id="search-input" name="search-input" class="border-round" type="text"
+        autocomplete="off"
+        placeholder="Click here to search for a drink"
           onfocus="this.placeholder=''">
       </div>
     </div>
