Changed div container a text input into a form element.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <div class="sub-header-div">
         <h4 id="sub-header-text">Discover your next favorite drink</h4>
       </div>
-      <div class="search-box hidden">
+      <form class="search-box hidden">
         <input id="search-input" name="search-input" class="border-round" type="text" placeholder="Click here to search for a drink"
           onfocus="this.placeholder=''">
-      </div>
+      </form>
     </div>
 
     <div class="page-home">
