corrected tabbing for input element

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <h4 id="sub-header-text">Discover your next favorite drink</h4>
       </div>
       <form class="search-box hidden">
-        <input id="search-input" name="search-input" class="border-round" type="text" placeholder="Click here to search for a drink"
-        autocomplete="off"
-        placeholder="Click here to search for a drink"
+        <input id="search-input" name="search-input" class="border-round" type="text"
+          placeholder="Click here to search for a drink"
+          autocomplete="off"
           onfocus="this.placeholder=''">
       </form>
     </div>
