Changed custom head icon. Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Drink It!">
+  <meta property="og:description" content="Find the recipe for your next favorite cocktails and drinks">
+  <meta property="og:image" content="images/drink-it-thumb.png">
+  <meta property="og:url" content="file:///C:/Users/dto19/repos/drink-it/index.html">
   <title>Drink It!</title>
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/logo.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
