Changed meta tags

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Drink It!">
   <meta property="og:description" content="Find the recipe for your next favorite cocktails and drinks">
-  <meta property="og:image" content="images/drink-it-thumb.png">
-  <meta property="og:url" content="file:///C:/Users/dto19/repos/drink-it/index.html">
+  <meta property="og:image" content="https://i.imgur.com/H9jPSNt.png">
+  <meta property="og:url" content="thedanielto.github.io/drink-it/">
   <title>Drink It!</title>
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
